src/parser.output
Nonterminals useless in grammar

   statement_list
   identifier_list


Terminals unused in grammar

   CONST
   ELLIPSIS
   VOLATILE
   FLOAT_NUM
   HEX_NUM
   INT_NUM
   CHAR_CONSTANT
   MOD_ASSGIN


Rules useless in grammar

  180 statement_list: statement
  181               | statement_list statement


Rules useless in parser due to conflicts

  109 block_item: %empty

  112 block_item_list: %empty


State 50 conflicts: 42 shift/reduce, 42 reduce/reduce
State 119 conflicts: 42 shift/reduce
State 120 conflicts: 42 reduce/reduce
State 288 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit

    2 primary_expression: IDENTIFIER
    3                   | CONSTANT
    4                   | STRING_LITERAL
    5                   | '(' expression ')'

    6 postfix_expression: primary_expression
    7                   | postfix_expression L_SQ_BR expression R_SQ_BR
    8                   | postfix_expression '(' ')'
    9                   | postfix_expression '(' argument_expression_list ')'
   10                   | postfix_expression '.' IDENTIFIER
   11                   | postfix_expression PTR_OP IDENTIFIER
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list ',' assignment_expression

   16 unary_expression: postfix_expression
   17                 | INC_OP unary_expression
   18                 | DEC_OP unary_expression
   19                 | unary_operator cast_expression
   20                 | SIZEOF unary_expression
   21                 | SIZEOF '(' type_name ')'

   22 unary_operator: '&'
   23               | '*'
   24               | '+'
   25               | '-'
   26               | '~'
   27               | '!'

   28 cast_expression: unary_expression
   29                | '(' type_name ')' cast_expression

   30 multiplicative_expression: cast_expression
   31                          | multiplicative_expression '*' cast_expression
   32                          | multiplicative_expression '/' cast_expression
   33                          | multiplicative_expression '%' cast_expression

   34 additive_expression: multiplicative_expression
   35                    | additive_expression '+' multiplicative_expression
   36                    | additive_expression '-' multiplicative_expression

   37 shift_expression: additive_expression
   38                 | shift_expression LEFT_OP additive_expression
   39                 | shift_expression RIGHT_OP additive_expression

   40 relational_expression: shift_expression
   41                      | relational_expression LESS shift_expression
   42                      | relational_expression MORE shift_expression
   43                      | relational_expression LE_OP shift_expression
   44                      | relational_expression GE_OP shift_expression

   45 equality_expression: relational_expression
   46                    | equality_expression EQ_OP relational_expression
   47                    | equality_expression NE_OP relational_expression

   48 and_expression: equality_expression
   49               | and_expression '&' equality_expression

   50 exclusive_or_expression: and_expression
   51                        | exclusive_or_expression '^' and_expression

   52 inclusive_or_expression: exclusive_or_expression
   53                        | inclusive_or_expression '|' exclusive_or_expression

   54 logical_and_expression: inclusive_or_expression
   55                       | logical_and_expression AND_OP inclusive_or_expression

   56 logical_or_expression: logical_and_expression
   57                      | logical_or_expression OR_OP logical_and_expression

   58 conditional_expression: logical_or_expression
   59                       | logical_or_expression '?' expression ':' conditional_expression

   60 assignment_expression: conditional_expression
   61                      | unary_expression assignment_operator assignment_expression

   62 assignment_operator: '='
   63                    | MUL_ASSIGN
   64                    | DIV_ASSIGN
   65                    | MOD_ASSIGN
   66                    | ADD_ASSIGN
   67                    | SUB_ASSIGN
   68                    | LEFT_ASSIGN
   69                    | RIGHT_ASSIGN
   70                    | AND_ASSIGN
   71                    | XOR_ASSIGN
   72                    | OR_ASSIGN

   73 expression: assignment_expression
   74           | expression ',' assignment_expression

   75 constant_expression: conditional_expression

   76 declaration_specifiers: storage_class_specifier
   77                       | storage_class_specifier declaration_specifiers
   78                       | type_specifier
   79                       | type_specifier declaration_specifiers

   80 init_declarator_list: init_declarator
   81                     | init_declarator_list ',' init_declarator

   82 init_declarator: declarator
   83                | declarator '=' initializer

   84 storage_class_specifier: TYPEDEF
   85                        | STATIC
   86                        | AUTO

   87 translation_unit: external_declaration
   88                 | translation_unit external_declaration

   89 external_declaration: function_definition
   90                     | declaration

   91 type_specifier: VOID
   92               | CHAR
   93               | SHORT
   94               | INT
   95               | LONG
   96               | FLOAT
   97               | DOUBLE
   98               | SIGNED
   99               | UNSIGNED
  100               | struct_or_union_specifier
  101               | enum_specifier

  102 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  103                          | struct_or_union '{' struct_declaration_list '}'
  104                          | struct_or_union IDENTIFIER

  105 function_definition: declaration_specifiers declarator declaration_list compound_statement
  106                    | declaration_specifiers declarator compound_statement

  107 compound_statement: '{' '}'
  108                   | '{' block_item_list '}'

  109 block_item: %empty
  110           | declaration
  111           | statement

  112 block_item_list: %empty
  113                | block_item_list block_item
  114                | block_item

  115 declaration_list: declaration
  116                 | declaration_list declaration

  117 declarator: direct_declarator

  118 declaration: declaration_specifiers ';'
  119            | declaration_specifiers init_declarator_list ';'

  120 initializer: assignment_expression
  121            | '{' initializer_list '}'
  122            | '{' initializer_list ',' '}'

  123 initializer_list: initializer
  124                 | initializer_list ',' initializer

  125 struct_declaration_list: struct_declaration
  126                        | struct_declaration_list struct_declaration

  127 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  128 struct_or_union: STRUCT
  129                | UNION

  130 type_name: specifier_qualifier_list

  131 specifier_qualifier_list: type_specifier specifier_qualifier_list
  132                         | type_specifier

  133 struct_declarator_list: struct_declarator
  134                       | struct_declarator_list ',' struct_declarator

  135 struct_declarator: declarator
  136                  | ':' constant_expression
  137                  | declarator ':' constant_expression

  138 enum_specifier: ENUM '{' enumerator_list '}'
  139               | ENUM IDENTIFIER '{' enumerator_list '}'
  140               | ENUM IDENTIFIER

  141 enumerator_list: enumerator
  142                | enumerator_list ',' enumerator

  143 enumerator: IDENTIFIER
  144           | IDENTIFIER '=' constant_expression

  145 direct_declarator: IDENTIFIER
  146                  | '(' declarator ')'
  147                  | direct_declarator L_SQ_BR constant_expression R_SQ_BR
  148                  | direct_declarator L_SQ_BR R_SQ_BR
  149                  | direct_declarator '(' parameter_type_list ')'
  150                  | direct_declarator '(' ')'

  151 parameter_list: parameter_declaration
  152               | parameter_list ',' parameter_declaration

  153 parameter_type_list: parameter_list

  154 parameter_declaration: declaration_specifiers declarator
  155                      | declaration_specifiers

  156 jump_statement: GOTO IDENTIFIER ';'
  157               | CONTINUE ';'
  158               | BREAK ';'
  159               | RETURN ';'
  160               | RETURN expression ';'

  161 statement: labeled_statement
  162          | compound_statement
  163          | expression_statement
  164          | selection_statement
  165          | iteration_statement
  166          | jump_statement

  167 expression_statement: ';'
  168                     | expression ';'
  169                     | declaration

  170 selection_statement: IF '(' expression ')' statement
  171                    | IF '(' expression ')' statement ELSE statement
  172                    | SWITCH '(' expression ')' statement

  173 iteration_statement: WHILE '(' expression ')' statement
  174                    | DO statement WHILE '(' expression ')' ';'
  175                    | FOR '(' expression_statement expression_statement ')' statement
  176                    | FOR '(' expression_statement expression_statement expression ')' statement

  177 labeled_statement: IDENTIFIER ':' statement
  178                  | CASE constant_expression ':' statement
  179                  | DEFAULT ':' statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 27
'%' (37) 33
'&' (38) 22 49
'(' (40) 5 8 9 21 29 146 149 150 170 171 172 173 174 175 176
')' (41) 5 8 9 21 29 146 149 150 170 171 172 173 174 175 176
'*' (42) 23 31
'+' (43) 24 35
',' (44) 15 74 81 122 124 134 142 152
'-' (45) 25 36
'.' (46) 10
'/' (47) 32
':' (58) 59 136 137 177 178 179
';' (59) 118 119 127 156 157 158 159 160 167 168 174
'=' (61) 62 83 144
'?' (63) 59
'^' (94) 51
'{' (123) 102 103 107 108 121 122 138 139
'|' (124) 53
'}' (125) 102 103 107 108 121 122 138 139
'~' (126) 26
error (256)
AUTO (258) 86
BREAK (259) 158
CASE (260) 178
CHAR (261) 92
CONTINUE (262) 157
DEFAULT (263) 179
DO (264) 174
DOUBLE (265) 97
ELSE (266) 171
ENUM (267) 138 139 140
FLOAT (268) 96
FOR (269) 175 176
IF (270) 170 171
INT (271) 94
LONG (272) 95
RETURN (273) 159 160
SHORT (274) 93
SIGNED (275) 98
UNSIGNED (276) 99
SIZEOF (277) 20 21
STATIC (278) 85
STRUCT (279) 128
SWITCH (280) 172
TYPEDEF (281) 84
VOID (282) 91
WHILE (283) 173 174
CONST (284)
ELLIPSIS (285)
ADD_ASSIGN (286) 66
SUB_ASSIGN (287) 67
MUL_ASSIGN (288) 63
DIV_ASSIGN (289) 64
MOD_ASSIGN (290) 65
RIGHT_ASSIGN (291) 69
LEFT_ASSIGN (292) 68
AND_ASSIGN (293) 70
XOR_ASSIGN (294) 71
OR_ASSIGN (295) 72
INC_OP (296) 12 17
DEC_OP (297) 13 18
EQ_OP (298) 46
GE_OP (299) 44
LE_OP (300) 43
OR_OP (301) 57
AND_OP (302) 55
LEFT_OP (303) 38
RIGHT_OP (304) 39
PTR_OP (305) 11
NE_OP (306) 47
GOTO (307) 156
UNION (308) 129
VOLATILE (309)
L_SQ_BR (310) 7 147 148
R_SQ_BR (311) 7 147 148
IDENTIFIER (312) 2 10 11 102 104 139 140 143 144 145 156 177
FLOAT_NUM (313)
HEX_NUM (314)
INT_NUM (315)
CHAR_CONSTANT (316)
CONSTANT (317) 3
MOD_ASSGIN (318)
STRING_LITERAL (319) 4
MORE (320) 42
LESS (321) 41


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
ROOT (88)
    on left: 1, on right: 0
primary_expression (89)
    on left: 2 3 4 5, on right: 6
postfix_expression (90)
    on left: 6 7 8 9 10 11 12 13, on right: 7 8 9 10 11 12 13 16
argument_expression_list (91)
    on left: 14 15, on right: 9 15
unary_expression (92)
    on left: 16 17 18 19 20 21, on right: 17 18 20 28 61
unary_operator (93)
    on left: 22 23 24 25 26 27, on right: 19
cast_expression (94)
    on left: 28 29, on right: 19 29 30 31 32 33
multiplicative_expression (95)
    on left: 30 31 32 33, on right: 31 32 33 34 35 36
additive_expression (96)
    on left: 34 35 36, on right: 35 36 37 38 39
shift_expression (97)
    on left: 37 38 39, on right: 38 39 40 41 42 43 44
relational_expression (98)
    on left: 40 41 42 43 44, on right: 41 42 43 44 45 46 47
equality_expression (99)
    on left: 45 46 47, on right: 46 47 48 49
and_expression (100)
    on left: 48 49, on right: 49 50 51
exclusive_or_expression (101)
    on left: 50 51, on right: 51 52 53
inclusive_or_expression (102)
    on left: 52 53, on right: 53 54 55
logical_and_expression (103)
    on left: 54 55, on right: 55 56 57
logical_or_expression (104)
    on left: 56 57, on right: 57 58 59
conditional_expression (105)
    on left: 58 59, on right: 59 60 75
assignment_expression (106)
    on left: 60 61, on right: 14 15 61 73 74 120
assignment_operator (107)
    on left: 62 63 64 65 66 67 68 69 70 71 72, on right: 61
expression (108)
    on left: 73 74, on right: 5 7 59 74 160 168 170 171 172 173 174
    176
constant_expression (109)
    on left: 75, on right: 136 137 144 147 178
declaration_specifiers (110)
    on left: 76 77 78 79, on right: 77 79 105 106 118 119 154 155
init_declarator_list (111)
    on left: 80 81, on right: 81 119
init_declarator (112)
    on left: 82 83, on right: 80 81
storage_class_specifier (113)
    on left: 84 85 86, on right: 76 77
translation_unit (114)
    on left: 87 88, on right: 1 88
external_declaration (115)
    on left: 89 90, on right: 87 88
type_specifier (116)
    on left: 91 92 93 94 95 96 97 98 99 100 101, on right: 78 79 131
    132
struct_or_union_specifier (117)
    on left: 102 103 104, on right: 100
function_definition (118)
    on left: 105 106, on right: 89
compound_statement (119)
    on left: 107 108, on right: 105 106 162
block_item (120)
    on left: 109 110 111, on right: 113 114
block_item_list (121)
    on left: 112 113 114, on right: 108 113
declaration_list (122)
    on left: 115 116, on right: 105 116
declarator (123)
    on left: 117, on right: 82 83 105 106 135 137 146 154
declaration (124)
    on left: 118 119, on right: 90 110 115 116 169
initializer (125)
    on left: 120 121 122, on right: 83 123 124
initializer_list (126)
    on left: 123 124, on right: 121 122 124
struct_declaration_list (127)
    on left: 125 126, on right: 102 103 126
struct_declaration (128)
    on left: 127, on right: 125 126
struct_or_union (129)
    on left: 128 129, on right: 102 103 104
type_name (130)
    on left: 130, on right: 21 29
specifier_qualifier_list (131)
    on left: 131 132, on right: 127 130 131
struct_declarator_list (132)
    on left: 133 134, on right: 127 134
struct_declarator (133)
    on left: 135 136 137, on right: 133 134
enum_specifier (134)
    on left: 138 139 140, on right: 101
enumerator_list (135)
    on left: 141 142, on right: 138 139 142
enumerator (136)
    on left: 143 144, on right: 141 142
direct_declarator (137)
    on left: 145 146 147 148 149 150, on right: 117 147 148 149 150
parameter_list (138)
    on left: 151 152, on right: 152 153
parameter_type_list (139)
    on left: 153, on right: 149
parameter_declaration (140)
    on left: 154 155, on right: 151 152
jump_statement (141)
    on left: 156 157 158 159 160, on right: 166
statement (142)
    on left: 161 162 163 164 165 166, on right: 111 170 171 172 173
    174 175 176 177 178 179
expression_statement (143)
    on left: 167 168 169, on right: 163 175 176
selection_statement (144)
    on left: 170 171 172, on right: 164
iteration_statement (145)
    on left: 173 174 175 176, on right: 165
labeled_statement (146)
    on left: 177 178 179, on right: 161


State 0

    0 $accept: . ROOT $end

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STATIC    shift, and go to state 11
    STRUCT    shift, and go to state 12
    TYPEDEF   shift, and go to state 13
    VOID      shift, and go to state 14
    UNION     shift, and go to state 15

    ROOT                       go to state 16
    declaration_specifiers     go to state 17
    storage_class_specifier    go to state 18
    translation_unit           go to state 19
    external_declaration       go to state 20
    type_specifier             go to state 21
    struct_or_union_specifier  go to state 22
    function_definition        go to state 23
    declaration                go to state 24
    struct_or_union            go to state 25
    enum_specifier             go to state 26


State 1

   86 storage_class_specifier: AUTO .

    $default  reduce using rule 86 (storage_class_specifier)


State 2

   92 type_specifier: CHAR .

    $default  reduce using rule 92 (type_specifier)


State 3

   97 type_specifier: DOUBLE .

    $default  reduce using rule 97 (type_specifier)


State 4

  138 enum_specifier: ENUM . '{' enumerator_list '}'
  139               | ENUM . IDENTIFIER '{' enumerator_list '}'
  140               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 27
    '{'         shift, and go to state 28


State 5

   96 type_specifier: FLOAT .

    $default  reduce using rule 96 (type_specifier)


State 6

   94 type_specifier: INT .

    $default  reduce using rule 94 (type_specifier)


State 7

   95 type_specifier: LONG .

    $default  reduce using rule 95 (type_specifier)


State 8

   93 type_specifier: SHORT .

    $default  reduce using rule 93 (type_specifier)


State 9

   98 type_specifier: SIGNED .

    $default  reduce using rule 98 (type_specifier)


State 10

   99 type_specifier: UNSIGNED .

    $default  reduce using rule 99 (type_specifier)


State 11

   85 storage_class_specifier: STATIC .

    $default  reduce using rule 85 (storage_class_specifier)


State 12

  128 struct_or_union: STRUCT .

    $default  reduce using rule 128 (struct_or_union)


State 13

   84 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 84 (storage_class_specifier)


State 14

   91 type_specifier: VOID .

    $default  reduce using rule 91 (type_specifier)


State 15

  129 struct_or_union: UNION .

    $default  reduce using rule 129 (struct_or_union)


State 16

    0 $accept: ROOT . $end

    $end  shift, and go to state 29


State 17

  105 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  106                    | declaration_specifiers . declarator compound_statement
  118 declaration: declaration_specifiers . ';'
  119            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 30
    '('         shift, and go to state 31
    ';'         shift, and go to state 32

    init_declarator_list  go to state 33
    init_declarator       go to state 34
    declarator            go to state 35
    direct_declarator     go to state 36


State 18

   76 declaration_specifiers: storage_class_specifier .
   77                       | storage_class_specifier . declaration_specifiers

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STATIC    shift, and go to state 11
    STRUCT    shift, and go to state 12
    TYPEDEF   shift, and go to state 13
    VOID      shift, and go to state 14
    UNION     shift, and go to state 15

    $default  reduce using rule 76 (declaration_specifiers)

    declaration_specifiers     go to state 37
    storage_class_specifier    go to state 18
    type_specifier             go to state 21
    struct_or_union_specifier  go to state 22
    struct_or_union            go to state 25
    enum_specifier             go to state 26


State 19

    1 ROOT: translation_unit .
   88 translation_unit: translation_unit . external_declaration

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STATIC    shift, and go to state 11
    STRUCT    shift, and go to state 12
    TYPEDEF   shift, and go to state 13
    VOID      shift, and go to state 14
    UNION     shift, and go to state 15

    $default  reduce using rule 1 (ROOT)

    declaration_specifiers     go to state 17
    storage_class_specifier    go to state 18
    external_declaration       go to state 38
    type_specifier             go to state 21
    struct_or_union_specifier  go to state 22
    function_definition        go to state 23
    declaration                go to state 24
    struct_or_union            go to state 25
    enum_specifier             go to state 26


State 20

   87 translation_unit: external_declaration .

    $default  reduce using rule 87 (translation_unit)


State 21

   78 declaration_specifiers: type_specifier .
   79                       | type_specifier . declaration_specifiers

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STATIC    shift, and go to state 11
    STRUCT    shift, and go to state 12
    TYPEDEF   shift, and go to state 13
    VOID      shift, and go to state 14
    UNION     shift, and go to state 15

    $default  reduce using rule 78 (declaration_specifiers)

    declaration_specifiers     go to state 39
    storage_class_specifier    go to state 18
    type_specifier             go to state 21
    struct_or_union_specifier  go to state 22
    struct_or_union            go to state 25
    enum_specifier             go to state 26


State 22

  100 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 100 (type_specifier)


State 23

   89 external_declaration: function_definition .

    $default  reduce using rule 89 (external_declaration)


State 24

   90 external_declaration: declaration .

    $default  reduce using rule 90 (external_declaration)


State 25

  102 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  103                          | struct_or_union . '{' struct_declaration_list '}'
  104                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 40
    '{'         shift, and go to state 41


State 26

  101 type_specifier: enum_specifier .

    $default  reduce using rule 101 (type_specifier)


State 27

  139 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  140               | ENUM IDENTIFIER .

    '{'  shift, and go to state 42

    $default  reduce using rule 140 (enum_specifier)


State 28

  138 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 43

    enumerator_list  go to state 44
    enumerator       go to state 45


State 29

    0 $accept: ROOT $end .

    $default  accept


State 30

  145 direct_declarator: IDENTIFIER .

    $default  reduce using rule 145 (direct_declarator)


State 31

  146 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 30
    '('         shift, and go to state 31

    declarator         go to state 46
    direct_declarator  go to state 36


State 32

  118 declaration: declaration_specifiers ';' .

    $default  reduce using rule 118 (declaration)


State 33

   81 init_declarator_list: init_declarator_list . ',' init_declarator
  119 declaration: declaration_specifiers init_declarator_list . ';'

    ','  shift, and go to state 47
    ';'  shift, and go to state 48


State 34

   80 init_declarator_list: init_declarator .

    $default  reduce using rule 80 (init_declarator_list)


State 35

   82 init_declarator: declarator .
   83                | declarator . '=' initializer
  105 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  106                    | declaration_specifiers declarator . compound_statement

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STATIC    shift, and go to state 11
    STRUCT    shift, and go to state 12
    TYPEDEF   shift, and go to state 13
    VOID      shift, and go to state 14
    UNION     shift, and go to state 15
    '='       shift, and go to state 49
    '{'       shift, and go to state 50

    $default  reduce using rule 82 (init_declarator)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 18
    type_specifier             go to state 21
    struct_or_union_specifier  go to state 22
    compound_statement         go to state 52
    declaration_list           go to state 53
    declaration                go to state 54
    struct_or_union            go to state 25
    enum_specifier             go to state 26


State 36

  117 declarator: direct_declarator .
  147 direct_declarator: direct_declarator . L_SQ_BR constant_expression R_SQ_BR
  148                  | direct_declarator . L_SQ_BR R_SQ_BR
  149                  | direct_declarator . '(' parameter_type_list ')'
  150                  | direct_declarator . '(' ')'

    L_SQ_BR  shift, and go to state 55
    '('      shift, and go to state 56

    $default  reduce using rule 117 (declarator)


State 37

   77 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 77 (declaration_specifiers)


State 38

   88 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 88 (translation_unit)


State 39

   79 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 79 (declaration_specifiers)


State 40

  102 struct_or_union_specifier: struct_or_union IDENTIFIER . '{' struct_declaration_list '}'
  104                          | struct_or_union IDENTIFIER .

    '{'  shift, and go to state 57

    $default  reduce using rule 104 (struct_or_union_specifier)


State 41

  103 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    SHORT     shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    STRUCT    shift, and go to state 12
    VOID      shift, and go to state 14
    UNION     shift, and go to state 15

    type_specifier             go to state 58
    struct_or_union_specifier  go to state 22
    struct_declaration_list    go to state 59
    struct_declaration         go to state 60
    struct_or_union            go to state 25
    specifier_qualifier_list   go to state 61
    enum_specifier             go to state 26


State 42

  139 enum_specifier: ENUM IDENTIFIER '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 43

    enumerator_list  go to state 62
    enumerator       go to state 45


State 43

  143 enumerator: IDENTIFIER .
  144           | IDENTIFIER . '=' constant_expression

    '='  shift, and go to state 63

    $default  reduce using rule 143 (enumerator)


State 44

  138 enum_specifier: ENUM '{' enumerator_list . '}'
  142 enumerator_list: enumerator_list . ',' enumerator

    ','  shift, and go to state 64
    '}'  shift, and go to state 65


State 45

  141 enumerator_list: enumerator .

    $default  reduce using rule 141 (enumerator_list)


State 46

  146 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 66


State 47

   81 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 30
    '('         shift, and go to state 31

    init_declarator    go to state 67
    declarator         go to state 68
    direct_declarator  go to state 36


State 48

  119 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 119 (declaration)


State 49

   83 init_declarator: declarator '=' . initializer

    SIZEOF          shift, and go to state 69
    INC_OP          shift, and go to state 70
    DEC_OP          shift, and go to state 71
    IDENTIFIER      shift, and go to state 72
    CONSTANT        shift, and go to state 73
    STRING_LITERAL  shift, and go to state 74
    '*'             shift, and go to state 75
    '+'             shift, and go to state 76
    '-'             shift, and go to state 77
    '~'             shift, and go to state 78
    '!'             shift, and go to state 79
    '&'             shift, and go to state 80
    '('             shift, and go to state 81
    '{'             shift, and go to state 82

    primary_expression         go to state 83
    postfix_expression         go to state 84
    unary_expression           go to state 85
    unary_operator             go to state 86
    cast_expression            go to state 87
    multiplicative_expression  go to state 88
    additive_expression        go to state 89
    shift_expression           go to state 90
    relational_expression      go to state 91
    equality_expression        go to state 92
    and_expression             go to state 93
    exclusive_or_expression    go to state 94
    inclusive_or_expression    go to state 95
    logical_and_expression     go to state 96
    logical_or_expression      go to state 97
    conditional_expression     go to state 98
    assignment_expression      go to state 99
    initializer                go to state 100


State 50

  107 compound_statement: '{' . '}'
  108                   | '{' . block_item_list '}'

    AUTO            shift, and go to state 1
    BREAK           shift, and go to state 101
    CASE            shift, and go to state 102
    CHAR            shift, and go to state 2
    CONTINUE        shift, and go to state 103
    DEFAULT         shift, and go to state 104
    DO              shift, and go to state 105
    DOUBLE          shift, and go to state 3
    ENUM            shift, and go to state 4
    FLOAT           shift, and go to state 5
    FOR             shift, and go to state 106
    IF              shift, and go to state 107
    INT             shift, and go to state 6
    LONG            shift, and go to state 7
    RETURN          shift, and go to state 108
    SHORT           shift, and go to state 8
    SIGNED          shift, and go to state 9
    UNSIGNED        shift, and go to state 10
    SIZEOF          shift, and go to state 69
    STATIC          shift, and go to state 11
    STRUCT          shift, and go to state 12
    SWITCH          shift, and go to state 109
    TYPEDEF         shift, and go to state 13
    VOID            shift, and go to state 14
    WHILE           shift, and go to state 110
    INC_OP          shift, and go to state 70
    DEC_OP          shift, and go to state 71
    GOTO            shift, and go to state 111
    UNION           shift, and go to state 15
    IDENTIFIER      shift, and go to state 112
    CONSTANT        shift, and go to state 73
    STRING_LITERAL  shift, and go to state 74
    '*'             shift, and go to state 75
    '+'             shift, and go to state 76
    '-'             shift, and go to state 77
    '~'             shift, and go to state 78
    '!'             shift, and go to state 79
    '&'             shift, and go to state 80
    '('             shift, and go to state 81
    '{'             shift, and go to state 50
    '}'             shift, and go to state 113
    ';'             shift, and go to state 114

    AUTO            [reduce using rule 109 (block_item)]
    AUTO            [reduce using rule 112 (block_item_list)]
    BREAK           [reduce using rule 109 (block_item)]
    BREAK           [reduce using rule 112 (block_item_list)]
    CASE            [reduce using rule 109 (block_item)]
    CASE            [reduce using rule 112 (block_item_list)]
    CHAR            [reduce using rule 109 (block_item)]
    CHAR            [reduce using rule 112 (block_item_list)]
    CONTINUE        [reduce using rule 109 (block_item)]
    CONTINUE        [reduce using rule 112 (block_item_list)]
    DEFAULT         [reduce using rule 109 (block_item)]
    DEFAULT         [reduce using rule 112 (block_item_list)]
    DO              [reduce using rule 109 (block_item)]
    DO              [reduce using rule 112 (block_item_list)]
    DOUBLE          [reduce using rule 109 (block_item)]
    DOUBLE          [reduce using rule 112 (block_item_list)]
    ENUM            [reduce using rule 109 (block_item)]
    ENUM            [reduce using rule 112 (block_item_list)]
    FLOAT           [reduce using rule 109 (block_item)]
    FLOAT           [reduce using rule 112 (block_item_list)]
    FOR             [reduce using rule 109 (block_item)]
    FOR             [reduce using rule 112 (block_item_list)]
    IF              [reduce using rule 109 (block_item)]
    IF              [reduce using rule 112 (block_item_list)]
    INT             [reduce using rule 109 (block_item)]
    INT             [reduce using rule 112 (block_item_list)]
    LONG            [reduce using rule 109 (block_item)]
    LONG            [reduce using rule 112 (block_item_list)]
    RETURN          [reduce using rule 109 (block_item)]
    RETURN          [reduce using rule 112 (block_item_list)]
    SHORT           [reduce using rule 109 (block_item)]
    SHORT           [reduce using rule 112 (block_item_list)]
    SIGNED          [reduce using rule 109 (block_item)]
    SIGNED          [reduce using rule 112 (block_item_list)]
    UNSIGNED        [reduce using rule 109 (block_item)]
    UNSIGNED        [reduce using rule 112 (block_item_list)]
    SIZEOF          [reduce using rule 109 (block_item)]
    SIZEOF          [reduce using rule 112 (block_item_list)]
    STATIC          [reduce using rule 109 (block_item)]
    STATIC          [reduce using rule 112 (block_item_list)]
    STRUCT          [reduce using rule 109 (block_item)]
    STRUCT          [reduce using rule 112 (block_item_list)]
    SWITCH          [reduce using rule 109 (block_item)]
    SWITCH          [reduce using rule 112 (block_item_list)]
    TYPEDEF         [reduce using rule 109 (block_item)]
    TYPEDEF         [reduce using rule 112 (block_item_list)]
    VOID            [reduce using rule 109 (block_item)]
    VOID            [reduce using rule 112 (block_item_list)]
    WHILE           [reduce using rule 109 (block_item)]
    WHILE           [reduce using rule 112 (block_item_list)]
    INC_OP          [reduce using rule 109 (block_item)]
    INC_OP          [reduce using rule 112 (block_item_list)]
    DEC_OP          [reduce using rule 109 (block_item)]
    DEC_OP          [reduce using rule 112 (block_item_list)]
    GOTO            [reduce using rule 109 (block_item)]
    GOTO            [reduce using rule 112 (block_item_list)]
    UNION           [reduce using rule 109 (block_item)]
    UNION           [reduce using rule 112 (block_item_list)]
    IDENTIFIER      [reduce using rule 109 (block_item)]
    IDENTIFIER      [reduce using rule 112 (block_item_list)]
    CONSTANT        [reduce using rule 109 (block_item)]
    CONSTANT        [reduce using rule 112 (block_item_list)]
    STRING_LITERAL  [reduce using rule 109 (block_item)]
    STRING_LITERAL  [reduce using rule 112 (block_item_list)]
    '*'             [reduce using rule 109 (block_item)]
    '*'             [reduce using rule 112 (block_item_list)]
    '+'             [reduce using rule 109 (block_item)]
    '+'             [reduce using rule 112 (block_item_list)]
    '-'             [reduce using rule 109 (block_item)]
    '-'             [reduce using rule 112 (block_item_list)]
    '~'             [reduce using rule 109 (block_item)]
    '~'             [reduce using rule 112 (block_item_list)]
    '!'             [reduce using rule 109 (block_item)]
    '!'             [reduce using rule 112 (block_item_list)]
    '&'             [reduce using rule 109 (block_item)]
    '&'             [reduce using rule 112 (block_item_list)]
    '('             [reduce using rule 109 (block_item)]
    '('             [reduce using rule 112 (block_item_list)]
    '{'             [reduce using rule 109 (block_item)]
    '{'             [reduce using rule 112 (block_item_list)]
    '}'             [reduce using rule 109 (block_item)]
    '}'             [reduce using rule 112 (block_item_list)]
    ';'             [reduce using rule 109 (block_item)]
    ';'             [reduce using rule 112 (block_item_list)]
